// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`export data > Multi project setup > should test a simple multi-project workspace with multiple entryPoints > multi-project-multiple-entrypoint 1`] = `
"{
  "projects/project-i/src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "project-i",
    "externalLibraries": []
  }
}
{
  "projects/project-ii/src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "project-ii",
    "externalLibraries": []
  }
}"
`;

exports[`export data > Multi project setup > should test a simple multi-project workspace with single entryPoint > multi-project-single-entrypoint 1`] = `
"{
  "projects/project-i/src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "project-i",
    "externalLibraries": []
  }
}"
`;

exports[`export data > should also work with a sheriff.config.ts > sheriff-config 1`] = `
"{
  "src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [
      "src/holidays/index.ts",
      "src/customers/index.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/index.ts": {
    "module": "src/holidays",
    "moduleType": "barrel",
    "tags": [
      "scope:holidays"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/customers/index.ts": {
    "module": "src/customers",
    "moduleType": "barrel",
    "tags": [
      "scope:customers"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  }
}"
`;

exports[`export data > should avoid circular dependencies > circular-dependencies 1`] = `
"{
  "src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [
      "src/app1.service.ts",
      "src/app2.service.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/app1.service.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [
      "src/app2.service.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/app2.service.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [
      "src/app1.service.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  }
}"
`;

exports[`export data > should show unresolved imports > unresolved-imports 1`] = `
"{
  "src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [],
    "unresolvedImports": [
      "my-module"
    ],
    "projectName": "default",
    "externalLibraries": []
  }
}"
`;

exports[`export data > should skip not reachable files > not-reachable-files 1`] = `
"{
  "src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [
      "src/app1.service.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/app1.service.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  }
}"
`;

exports[`export data > should test a simple application > simple-application 1`] = `
"{
  "src/main.ts": {
    "module": ".",
    "moduleType": "barrel-less",
    "tags": [
      "root"
    ],
    "imports": [
      "src/holidays/feature/index.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/feature/index.ts": {
    "module": "src/holidays/feature",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:feature"
    ],
    "imports": [
      "src/holidays/feature/holidays-container.component.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/feature/holidays-container.component.ts": {
    "module": "src/holidays/feature",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:feature"
    ],
    "imports": [
      "src/holidays/data/index.ts",
      "src/holidays/ui/index.ts",
      "src/holidays/model/index.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": [
      "@angular/common",
      "@angular/core",
      "lodash"
    ]
  },
  "src/holidays/data/index.ts": {
    "module": "src/holidays/data",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:data"
    ],
    "imports": [
      "src/holidays/data/holidays-store.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/data/holidays-store.ts": {
    "module": "src/holidays/data",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:data"
    ],
    "imports": [
      "src/holidays/model/index.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": [
      "@ngrx/signals"
    ]
  },
  "src/holidays/model/index.ts": {
    "module": "src/holidays/model",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:model"
    ],
    "imports": [
      "src/holidays/model/holiday.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/model/holiday.ts": {
    "module": "src/holidays/model",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:model"
    ],
    "imports": [],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/ui/index.ts": {
    "module": "src/holidays/ui",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:ui"
    ],
    "imports": [
      "src/holidays/ui/holidays.component.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  },
  "src/holidays/ui/holidays.component.ts": {
    "module": "src/holidays/ui",
    "moduleType": "barrel",
    "tags": [
      "domain:holidays",
      "type:ui"
    ],
    "imports": [
      "src/holidays/model/index.ts"
    ],
    "unresolvedImports": [],
    "projectName": "default",
    "externalLibraries": []
  }
}"
`;
